src/style/home.scss
main.route-home {

.main{
  display: flex;
  padding-right: 5rem;
  .video{
  width: 80%;
  // padding-top: 1rem;
  }

  section.status-icons{
    display: none;
  }
  section.nameplate {
    border: 4px solid var(--accent);
    border-radius: 8px;
    width: 50%;

    // padding: 0.2rem;
    // margin: 0.5rem;
    font-weight: 800;

    p {
      color: var(--text);
      font-size: 1.5rem;
      text-align: center;
      padding-top: 0.5rem;
      padding-bottom: 0.5rem;
    }
    h2 {
      height: 3rem;
      padding-bottom: 1rem;
      border-radius: 10px;
      background-color: none;
      border: 2px solid var(--primary);
      font-size: 2rem;
      font-family: 'Poppins';
      text-align: center;
      color: var(--secondary);
    }
  }

  section #textForm{
    margin: 1rem;
    border-radius: 10px;
    border: 2px solid var(--accent);
    padding: 0.5rem;
    display: flex;
    flex-direction: column;
    
      form {
        width: 100%;
        height: fit-content;
        align-items: center;
        justify-items: center;
        align-self: center;
      }

      input{
        width: 100%;
        height: 2rem;
        border-radius: 10px;
        background-color: transparent;
        border: solid 2px var(--accent);
        font-size: 1rem;
        color: var(--text);
        font-weight: 600;
        text-align: center;
      }

      p{
        font-size: 1.2rem;
        font-weight: 800;
        color: var(--text);
        // background-color: none;
      }
      textarea{
        width: 100%;
        height: 10rem;
        // margin: 1rem;
        align-self: center;
        font-size: 1rem;
        padding: 0.5rem;
        border-radius: 10px;
        background-color: transparent;
        border: 5px solid var(--secondary);
        margin-top: 1rem;
        color: var(--text);
        font-weight: 500;
      }
      button{
        width: 100%;
        height: 2rem;
        margin-top: 1rem;
        border-radius: 1rem;
        background-color: var(--secondary);
        border: 2px solid var(--secondary);
        font-size: 1rem;
        color: var(--text);
      }
  } 
}



@media screen and (max-width: 800px){
  section.status-icons {
    display: flex;
    // flex-wrap: wrap;
    justify-items: center;
    align-items: center;
    align-content: center;
    justify-content: space-evenly;

    #status-level {
      fill: var(--primary);
      background-color: var(--primary);
      border-radius: 10px;

      padding: .5rem;

      display: flex;

      align-items: center;

      i {
        font-size: 1.8rem;
        color: var(--error);
        font-weight: 800;
      }

    }

    .status-components {
      display: flex;
      align-items: center;

      margin-block: 1rem;
      gap: 1rem;

      span {
        --fill: var(--secondary);

        display: grid;
        justify-items: center;

        position: relative;
        color: var(--fill);

        font-size: 3rem;
        transition: 250ms cubic-bezier(0.175, 0.885, 0.32, 1.275);

        &::after {
          position: absolute;
          top: 100%;

          content: attr(data-description);
          opacity: 0;

          transition: 250ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
          color: var(--fill);

          font-size: 1rem;
        }

        &:hover {
          transform: translateY(-1rem);

          &::after {
            opacity: 1;
          }
        }

        &.warning {
          --fill: var(--warning);
        }

        &.critical {
          --fill: var(--error);
        }
      }
    }
  }

  section.nameplate {
    border: 4px solid var(--accent);
    border-radius: 8px;

    padding: 0.2rem;
    margin: 0.5rem;
    font-weight: 800;

    p {
      color: var(--text);
      font-size: 1rem;
      text-align: center;
    }
    h2 {
      height: 3rem;
      padding-bottom: 1rem;
      border-radius: 10px;
      background-color: none;
      border: 2px solid var(--primary);
      font-size: 1.5rem;
      font-family: 'Poppins';
      text-align: center;
      color: var(--secondary);
    }
  }

  section #textForm{
    margin: 1rem;
    border-radius: 10px;
    border: 2px solid var(--accent);
    padding: 0.5rem;
    display: flex;
    flex-direction: column;
    
      form {
        width: 100%;
        height: fit-content;
        align-items: center;
        justify-items: center;
        align-self: center;
      }

      input{
        width: 100%;
        height: 2rem;
        border-radius: 10px;
        background-color: transparent;
        border: solid 2px var(--accent);
        font-size: 1rem;
        color: var(--text);
        font-weight: 600;
        text-align: center;
      }

      p{
        font-size: 1.2rem;
        font-weight: 800;
        color: var(--text);
        // background-color: none;
      }
      textarea{
        width: 100%;
        height: 5rem;
        // margin: 1rem;
        align-self: center;
        font-size: 1rem;
        padding: 0.5rem;
        border-radius: 10px;
        background-color: transparent;
        border: 5px solid var(--secondary);
        margin-top: 1rem;
        color: var(--text);
        font-weight: 500;
      }
      button{
        width: 100%;
        height: 2rem;
        margin-top: 1rem;
        border-radius: 1rem;
        background-color: var(--secondary);
        border: 2px solid var(--secondary);
        font-size: 1rem;
        color: var(--text);
      }
  } 
}
}

